[package]
name = "redis-cache"
version = "0.1.0"
authors = ["Evgeni Pirianov"]
license = "MIT OR Apache-2.0"
description = "Redis cache implementation with multiple features and wrappers"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
keywords = ["redis", "cache"]
repository = "https://github.com/BatiGencho/redis-cache"
homepage = "https://github.com/BatiGencho/redis-cache"

[dependencies]
derive_more = "0.99"
displaydoc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v4"] }
rand = "0.8.5"
redis = { version = "0.23.0", features = ["aio", "tokio-comp", "tokio-native-tls-comp", "cluster",  "cluster-async", "json"] }
futures = { version = "0.3.28", features = ["compat"] }
async-trait = "0.1.68"
metered = "0.9.0"
slotmap = { version = "1.0.6" }
tokio = { version = "1.28.2", features = [ "full" ] }
lazy_static = "1.4.0"
const-sha1 = "0.2.0"
crc16 = "0.4.0"
strum = { version = "0.25.0", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
crossbeam = {version = "0.8.2", features = ["crossbeam-queue"] }
toml = "0.8.4"
paste = "1.0.13"
